--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 		<!-- Bootstrap -->
 		<link href="vendor/css/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,600">
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:300,400">
 		<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 		<link href="css/style.css" rel="stylesheet">
 
@@ -44,7 +44,7 @@
 		var js, fjs = d.getElementsByTagName(s)[0];
 		if (d.getElementById(id)) return;
 		js = d.createElement(s); js.id = id;
-		js.src = "https:///connect.facebook.net/sv_SE/sdk.js#xfbml=1&version=v2.4";
+		js.src = "https://connect.facebook.net/sv_SE/sdk.js#xfbml=1&version=v2.4";
 		fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 	</body>
