Försök med modals, använder browserstack nu

--- a/index.html
+++ b/index.html
@@ -47,5 +47,8 @@
 		js.src = "https://connect.facebook.net/sv_SE/sdk.js#xfbml=1&version=v2.4";
 		fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
+
+		<div ng-include="'partials/akut-modal.html'"></div>
+		<div ng-include="'partials/lista-mig-modal.html'"></div>
 	</body>
 </html>
