--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<body>
 		<div ng-include="'partials/navigation.html'"></div>
 
-		<div id="content" class="" ng-view>
+		<div id="content" ng-view>
 		</div>
 
 		<footer ng-include="'partials/footer.html'"></footer>
@@ -49,6 +49,7 @@
 		}(document, 'script', 'facebook-jssdk'));</script>
 
 		<div ng-include="'partials/akut-modal.html'"></div>
+		<div ng-include="'partials/ring-mig-modal.html'"></div>
 		<div ng-include="'partials/lista-mig-modal.html'"></div>
 	</body>
 </html>
