alignment, footer, static menu etc

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 
 		<footer ng-include="'partials/footer.html'"></footer>
 
+		<div class="menu">
+			<button data-toggle="modal" data-target="#akut-modal" class="btn btn-round-left btn-red pull-right"><i class="fa fa-bolt"></i> Akut</button><br />
+			<button data-toggle="modal" data-target="#ring-mig-modal" class="btn btn-round-left btn-yellow pull-right"><i class="fa fa-mobile"></i> Ring mig</button><br />
+			<button data-toggle="modal" data-target="#lista-mig-modal" class="btn btn-round-left btn-yellow"><i class="fa fa-pencil"></i> Lista mig</button><br />
+		</div>
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="vendor/js/bootstrap.min.js"></script>
 
