--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="beiring">
 	<head>
+		<base href="/newsite/">
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Beiring website</title>
+		<title>{{title || 'Vi utför all form av tandvård i Göteborg | Beiring Tandklinik'}}</title>
 
 		<!-- Bootstrap -->
 		<link href="vendor/css/bootstrap.min.css" rel="stylesheet">
@@ -36,7 +37,7 @@
 
 		<footer ng-include="'partials/footer.html'"></footer>
 
-		<div class="menu">
+		<div class="menu hidden-sm hidden-xs">
 			<button data-toggle="modal" data-target="#akut-modal" class="btn btn-round-left btn-red pull-right"><i class="fa fa-bolt"></i> Akut</button><br />
 			<button data-toggle="modal" data-target="#ring-mig-modal" class="btn btn-round-left btn-yellow pull-right"><i class="fa fa-mobile"></i> Ring mig</button><br />
 			<button data-toggle="modal" data-target="#lista-mig-modal" class="btn btn-round-left btn-yellow"><i class="fa fa-pencil"></i> Lista mig</button><br />
@@ -44,6 +45,27 @@
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="vendor/js/bootstrap.min.js"></script>
+
+
+
+
+		<!-- Google Analytics -->
+		<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-34768519-1', 'auto');
+		ga('send', 'pageview');
+
+		</script>
+		<!-- End Google Analytics -->
+
+
+
+
+
 
 		<div id="fb-root"></div>
 		<script>(function(d, s, id) {
