--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<base href="/">
 		<meta charset="utf-8">
+		<meta name="fragment" content="!">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>{{title || 'Vi utför all form av tandvård i Göteborg | Beiring Tandklinik'}}</title>
@@ -25,7 +26,6 @@
 		<!-- The Application -->
 		<script src="js/app.js"></script>
 		<script src="js/router.js"></script>
-		<script src="js/controllers.js"></script>
 		<script src="js/directives.js"></script>
 	</head>
 
