--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="fragment" content="!">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>{{title || 'Vi utför all form av tandvård i Göteborg | Beiring Tandklinik'}}</title>
+		<title ng-bind="title || 'Vi utför all form av tandvård i Göteborg | Beiring Tandklinik'">Vi utför all form av tandvård i Göteborg | Beiring Tandklinik</title>
 
 		<!-- Bootstrap -->
 		<link href="vendor/css/bootstrap.min.css" rel="stylesheet">
