Changes pushed to ftp

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="beiring">
+<html lang="sv" ng-app="beiring">
 	<head>
 		<base href="/">
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title ng-bind="title || 'Vi utför all form av tandvård i Göteborg | Beiring Tandklinik'">Vi utför all form av tandvård i Göteborg | Beiring Tandklinik</title>
+		<meta name="description" content="Vi utför all form av tandvård i Göteborg" />
+		<meta content="tandläkare tandvård göteborg beiring olskroken akut" name="keywords">
+
 
 		<!-- Bootstrap -->
 		<link href="vendor/css/bootstrap.min.css" rel="stylesheet">
@@ -22,13 +25,51 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-resource.min.js"></script>
 
-		<script src="//www.googleadservices.com/pagead/conversion_async.js"></script>
-
 		<!-- The Application -->
 		<script src="js/app.js"></script>
 		<script src="js/router.js"></script>
 		<script src="js/directives.js"></script>
+		
 
+		<!-- Facebook Conversion Code for Beiring Startpage -->
+			<script>(function() {
+			  var _fbq = window._fbq || (window._fbq = []);
+			  if (!_fbq.loaded) {
+			    var fbds = document.createElement('script');
+			    fbds.async = true;
+			    fbds.src = '//connect.facebook.net/en_US/fbds.js';
+			    var s = document.getElementsByTagName('script')[0];
+			    s.parentNode.insertBefore(fbds, s);
+			    _fbq.loaded = true;
+			  }
+			})();
+			window._fbq = window._fbq || [];
+			window._fbq.push(['track', '6038145885306', {'value':'0.00','currency':'SEK'}]);
+			</script>
+			<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?ev=6038145885306&amp;cd[value]=0.00&amp;cd[currency]=SEK&amp;noscript=1" /></noscript>
+
+		<!-- End of Facebook Conversion Code for Beiring Startpage -->
+
+
+		<!-- Facebook Conversion Code for tracking site visitors -->
+		<script>(function() {
+		var _fbq = window._fbq || (window._fbq = []);
+		if (!_fbq.loaded) {
+		var fbds = document.createElement('script');
+		fbds.async = true;
+		fbds.src = '//connect.facebook.net/en_US/fbds.js';
+		var s = document.getElementsByTagName('script')[0];
+		s.parentNode.insertBefore(fbds, s);
+		_fbq.loaded = true;
+		}
+		_fbq.push(['addPixelId', '1510687712585959']);
+		})();
+		window._fbq = window._fbq || [];
+		window._fbq.push(['track', 'PixelInitialized', {}]);
+		</script>
+		<noscript><img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?id=1510687712585959&amp;ev=PixelInitialized" /></noscript>
+
+<!-- End of Facebook Conversion Code for tracking site visitors -->
 
 	</head>
 
@@ -66,6 +107,18 @@
 
 		</script>
 		<!-- End Google Analytics -->
+
+
+		<script type='text/javascript'>
+			(function(A,d,S,t,a,g,e) { A['AdstageAnalytics']=a;A[a]=A[a]||function(){(A[a].q=A[a].q||[]).push(arguments)}; A[a].l=1*new Date();g=d.createElement(S),e=d.getElementsByTagName(S)[0]; g.async=1;g.src=t;e.parentNode.insertBefore(g, e); })(window, document, 'script', '//assets.adstage.io/analytics.js', '_as');
+			_as('create', '8df4cf2e-28c7-4f0c-b636-8c4ad90daa2e');
+			_as('send', 'pageview');
+		</script>
+
+
+
+
+
 
 
 
